[fix][dingo-calcite] Add data validation when modifying table columns